<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Laundry Timer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="empty_list_text">You have no active machines.</string>
    <string name="empty_list_add_button">Add a Machine</string>
    <string name="menu_add_machine">Add Machine</string>
    <string name="menu_preferences">Preferences</string>
    <string name="delete_machine">Delete</string>
    <string name="machine_number_text">Machine Number:</string>
    <string name="machine_time_text">Time:</string>
    <string name="washer">Washer</string>
    <string name="dryer">Dryer</string>
    
    <!-- Preferences Strings -->
    <string name="pref_default_machine_settings_cat">Default Machine Settings</string>
    <string name="pref_auto_select_settings_cat">Auto-Select Settings</string>
    <string name="pref_alarm_settings_cat">Default Alarm Settings</string>
    <string name="pref_washer_settings">Washer Settings</string>
    <string name="pref_dryer_settings">Dryer Settings</string>
    <string name="pref_auto_type_title">Auto-Select Machine Type</string>
    <string name="pref_auto_type_summary">Selects machine type based on machine number chosen.</string>
    <string name="pref_auto_numbers_title">Auto-Limit Machine Numbers</string>
    <string name="pref_auto_numbers_summary">Limits the possible machine number choices based on machine type.</string>
    <string name="pref_set_alarm_sound">Set Alarm Sound</string>
    <string name="pref_play_alarm_title">Play alarm</string>
    <string name="pref_vibrate_title">Vibrate</string>
    <string name="pref_notification_title">Notifications</string>
    <string name="pref_dryer_default_time">Default Dryer Time</string>
    <string name="pref_washer_default_time">Default Washer Time</string>
    <string name="pref_number_machines">Number of Machines</string>
    
    <!-- Dialog strings -->
    <string name="time_dialog_message">Set the default time in minutes:</string>
    <string name="num_machines_dialog_message">Set the number of machines:</string>
    <string name="select_machine_num_dialog_message">Select the machine number:</string>
    
    <!-- Machine fragment strings -->
    <string name="machine_title_label">Title</string>
    <string name="machine_specs_label">Specifications</string>
    <string name="machine_timer_label">Alarm Settings</string>
    <string name="machine_title_field_hint">AUTO-FILLS IF LEFT BLANK</string>
    <string name="start">Start</string>

</resources>
