<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/machine_title_label"
		style="?android:listSeparatorTextViewStyle"
		/>
    
    <EditText android:id="@+id/machine_title_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:inputType="textCapSentences"
        android:hint="@string/machine_title_field_hint"
        android:singleLine="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"  
        />
   
    <TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/machine_specs_label"
		android:paddingTop="5dp"
		style="?android:listSeparatorTextViewStyle"
		/>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    
	    <RadioGroup android:id="@+id/radio_group"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:layout_alignParentRight="true"
		    android:padding="15dp">
		    
		    <RadioButton android:id="@+id/radio_washer"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/washer"
		        android:textSize="20sp" />
		        
		    <RadioButton android:id="@+id/radio_dryer"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/dryer"
		        android:textSize="20sp" />
		</RadioGroup>
		
	    <TextView android:id="@+id/machine_specs_label"
	        android:text="@string/machine_number_text"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="15sp"
	        android:layout_toLeftOf="@id/radio_group"
	        android:paddingLeft="10dp"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
        />
	    
	    <Button android:id="@+id/machine_number_picker_button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_toLeftOf="@id/radio_group"
	        android:layout_marginLeft="5dp"
	        android:layout_below="@id/machine_specs_label" />    
	    
	    <Button android:id="@+id/start_button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="bottom"
	        android:text="@string/start"
	        android:padding="15dp"
	        android:layout_alignParentBottom="true"
       		/>
	    
	</RelativeLayout>
    
</LinearLayout>
